--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-code-editor": "^0.13.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
