--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ace-builds": "^1.17.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "js-beautify": "^1.14.7",
     "json-server": "^0.17.3",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-simple-code-editor": "^0.13.1",
+    "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
